Produzione/force-app/main/default/objects/Gruppo__c/fields/Genitore__c.field-meta.xml
<CustomField>
    <fullName>Genitore__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Genitore</label>
    <referenceTo>Gruppo__c</referenceTo>
    <relationshipLabel>Gruppi</relationshipLabel>
    <relationshipName>Gruppi</relationshipName>
    <type>Lookup</type>
</CustomField>