Produzione/force-app/main/default/objects/Gruppo__c/fields/Info__c.field-meta.xml
<CustomField>
    <fullName>Info__c</fullName>
    <formula>Genitore__r.Genitore__r.Genitore__r.Name + 
IF(NOT(ISBLANK(Genitore__r.Genitore__r.Genitore__c)), &quot; - &quot;, &quot;&quot;) + 
Genitore__r.Genitore__r.Name + 
IF(NOT(ISBLANK(Genitore__r.Genitore__c)), &quot; - &quot;, &quot;&quot;) + 
Genitore__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Info</label>
    <type>Text</type>
</CustomField>