Produzione/force-app/main/default/objects/Gruppo__c/fields/Sigla__c.field-meta.xml
<CustomField>
    <fullName>Sigla__c</fullName>
    <description>Sigla zona / distretto</description>
    <inlineHelpText>Sigla zona / distretto</inlineHelpText>
    <label>Sigla</label>
    <length>8</length>
    <type>Text</type>
</CustomField>