Produzione/force-app/main/default/objects/Gruppo__c/fields/Tipologia__c.field-meta.xml
<CustomField>
    <fullName>Tipologia__c</fullName>
    <label>Tipologia</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Principale</fullName>
            </value>
            <value>
                <fullName>Distretto</fullName>
            </value>
            <value>
                <fullName>Zona</fullName>
            </value>
            <value>
                <fullName>Casa Auto</fullName>
            </value>
            <value>
                <fullName>Marchio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>