Produzione/force-app/main/default/objects/Gruppo__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Genitore__c</columns>
    <columns>Sigla__c</columns>
    <columns>Tipologia__c</columns>
    <columns>URL_Logo__c</columns>
    <columns>Gruppo_Master__c</columns>
    <columns>Info__c</columns>
    <columns>Colore__c</columns>
    <columns>Ordine__c</columns>
    <columns>Campione_Minimo_Percentuale__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tutto</label>
</ListView>